making dots by (X,Y)

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
                     <div class="col-md-6 color " id='blue'></div>
                 </div>
                 <div class="row colors">
-                        <div class="col-md-6 color" id='green'></div>
-                        <div class="col-md-6 color " id='yellow'></div>
-                    </div>
-                    <div class="row colors">
-                            <div class="col-md-6 color" id='black'></div>
-                            <div class="col-md-6 color " id='blueviolet'></div>
-                        </div>
+                    <div class="col-md-6 color" id='green'></div>
+                    <div class="col-md-6 color " id='yellow'></div>
+                </div>
+                <div class="row colors">
+                    <div class="col-md-6 color" id='black'></div>
+                    <div class="col-md-6 color " id='blueviolet'></div>
+                </div>
             </div>
             <div class="col-md-10 " id="canvas">
-                <svg height="600px" width="100%"></svg>
             </div>
 
         </div>
-        <div class="row footer">footer blabla</div>
+        <div class="row footer">footer blabla
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
