--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
 
         <div class="row">
             <div class="col-md-2">
-                <h3>Pick a color</h3>
+                    <h3>Chooze Brush Size</h3>
+                    <div class="row colors">
+                        <div class="col-md-6 color" id='smallBrush' class="brush smallBrush ">small </div>
+                        <div class="col-md-6 color " id='mediumBrush' class="brush mediumBrush">medium</div>
+                    </div>
+                    <div class="row colors">
+                        <div class="col-md-6 color" id='giantBrush' class="brush giantBrush">giant</div>
+                        <div class="col-md-6 color " id='miniBrush' class="brush miniBrush">mini</div>
+                    </div>
+                <h3>Pick a Color</h3>
                 <div class="row colors">
                     <div class="col-md-6 color " id='red'></div>
                     <div class="col-md-6 color " id='blue'></div>
@@ -33,12 +42,17 @@
                     <div class="col-md-6 color" id='black'></div>
                     <div class="col-md-6 color " id='blueviolet'></div>
                 </div>
+                <div class="row colors">
+                    <br>
+                        <button type="button" class="btn btn-success btn-block" id="clear">Clear Canvas</button>                     
+                    </div>
             </div>
+         
             <div class="col-md-10 " id="canvas">
             </div>
 
         </div>
-        <div class="row footer">footer blabla
+        <div class="row footer">
         </div>
     </div>
 
