--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 </div>
                 <div class="row colors">
                     <br>
-                        <button type="button" class="btn btn-success btn-block" id="clear">Clear Canvas</button>                     
+                        <button type="button" class="btn btn-success btn-block" id="clear">Clear Canvas</button> <br>
+                        <button type="button" class="btn btn-info btn-block" id="erase">Eraser</button>                    
                     </div>
             </div>
          
