add eraser (white color...)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="row colors">
                     <br>
                         <button type="button" class="btn btn-success btn-block" id="clear">Clear Canvas</button> <br>
-                        <button type="button" class="btn btn-info btn-block" id="erase">Eraser</button>                    
+                        <button type="button" class="btn btn-info btn-block" id="white">Eraser</button>                    
                     </div>
             </div>
          
